--- a/stories/no/0291_det-som-søstera-til-vusi-sa_slides.html
+++ b/stories/no/0291_det-som-søstera-til-vusi-sa_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>کالای با گیاهان صحبت می کند - Global African Storybook</title>
+  <title>Det som søstera til Vusi sa - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="کالای-با-گیاهان-صحبت-می-کند" class="slide level1">
-<h1 dir="rtl">کالای با گیاهان صحبت می کند</h1>
+<section id="det-som-søstera-til-vusi-sa" class="slide level1">
+<h1>Det som søstera til Vusi sa</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
-<p dir="rtl">این کالای است. او هفت سال سن دارد. در زبان لوباکوسو که زبان او می باشد معنای اسمش - دختر خوب – است.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/02.jpg" /></p>
+<p>Tidlig en morgen ropte bestemoren til Vusi på ham: &quot;Vusi, vær snill og ta med dette egget til foreldrene dine. De vil lage en stor kake til søstera di sitt bryllup.&quot;</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/03.jpg" /></p>
-<p dir="rtl">کالای هر روز صبح که بیدار می شود با درخت پرتقال صحبت می کند. درخت پرتقال لطفا، حسابی رشد کن و به ما پرتقال های رسیده ی خوب بده.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/03.jpg" /></p>
+<p>På vei til foreldrene sine møtte Vusi to gutter som plukket frukt. Én gutt snappet egget fra Vusi og slengte det på et tre. Egget knuste.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/04.jpg" /></p>
-<p dir="rtl">کالای تا مدرسه راه می رود. در راه با علف ها صحبت می کند. علف ها، لطفا بیشتر رشد کنید و سبز شوید و خشک نشوید.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/04.jpg" /></p>
+<p>&quot;Hva har du gjort?&quot; ropte Vusi. &quot;Det egget var ment for en kake. Kaka var for bryllupet til søstera mi. Hva kommer søstera mi til å si hvis det ikke blir noen bryllupskake?&quot;</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/05.jpg" /></p>
-<p dir="rtl">کالای از کنار گل های وحشی رد می شود. گلهای وحشی لطفا، مرتب شکوفه بزنید که من بتوانم شما را در موهایم قرار دهم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/05.jpg" /></p>
+<p>Guttene var lei seg for at de ertet Vusi. &quot;Vi kan ikke hjelpe deg med kaka, men her er en kjepp til søstera di,&quot; sa den ene. Vusi fortsatte på reisen.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
-<p dir="rtl">در مدرسه، کالای با درختی که در وسط حیاط بود صحبت کرد.&quot; درخت لطفا، شاخه های بزرگ برویان تا ما بتوانیم زیر سایه‌ی تو درس بخوانیم.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/06.jpg" /></p>
+<p>På veien møtte han to menn som bygget et hus. &quot;Kan vi bruke den sterke kjeppen?&quot; spurte den ene. Men kjeppen var ikke sterk nok for bygningen, så den knakk.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/07.jpg" /></p>
-<p dir="rtl">کالای با حصار اطراف مدرسه صحبت می کند. &quot;لطفا محکم و قوی رشد کن و جلوی وارد شدن افراد بد را بگیر.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/07.jpg" /></p>
+<p>&quot;Hva har du gjort?&quot; ropte Vusi. &quot;Den kjeppen var en gave til søstera mi. Fruktplukkerne ga meg den kjeppen fordi de knuste egget som var ment for kaka. Kaka var ment for bryllupet til søstera mi. Nå er det ikke noe egg, ikke noen kake, og ikke noen gave. Hva kommer søstera mi til å si?&quot;</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/08.jpg" /></p>
-<p dir="rtl">وقتی کالای از مدرسه به خانه برگشت، درخت پرتقال را دید. کالای پرسید، &quot;آیا پرتقال هایت هنوز نرسیده ؟&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/08.jpg" /></p>
+<p>Bygningsarbeiderne var lei seg for at de knakk kjeppen. &quot;Vi kan ikke hjelpe deg med kaka, men her er litt halmtekke for huset til søstera di,&quot; sa den ene. Og slik fortsatte Vusi på reisen.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/09.jpg" /></p>
-<p dir="rtl">کالای آهی کشید وگفت، &quot;پرتقال ها هنوز سبز هستند.&quot; کالای گفت، &quot;فردا تو را خواهم دید درخت پرتقال.&quot; &quot;شاید بعد تویک پرتقال رسیده برای من داشته باشی!&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/09.jpg" /></p>
+<p>På veien møtte Vusi en bonde og ei ku. &quot;For noe deilig halm, kan jeg få en smakebit?&quot; spurte kua. Men halmen smakte så godt at kua spiste opp alt!</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,17 +168,62 @@
 </section>
 <section class="slide level1">
 
-<h2 dir="rtl" id="کالای-با-گیاهان-صحبت-می-کند-1">کالای با گیاهان صحبت می کند</h2>
-<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Jesse Pietersen<br> <strong>Translation:</strong> Marzieh Mohammadian Haghighi<br> <strong>Language:</strong> Persian<br>
-<p dir="rtl">
-This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p dir="rtl">
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/khalai-talks-plants'>here</a>
-<p dir="rtl"><div class="license">
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/10.jpg" /></p>
+<p>&quot;Hva har du gjort?&quot; ropte Vusi. &quot;Den halmen var en gave til søstera mi. Bygningsarbeiderne ga meg den halmen fordi de knakk kjeppen fra fruktplukkerne. Fruktplukkerne ga meg kjeppen fordi de knuste egget ment for kaka til søstera mi. Kaka var ment for bryllupet til søstera mi. Nå er det ikke noe egg, ikke noen kake, og ikke noen gave. hva kommer søstera mi til å si?&quot;</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/11.jpg" /></p>
+<p>Kua var lei seg for at hun var grådig. Bonden ble enig om at kua skulle følge med Vusi som en gave til søstera hans. Og slik fortsatte Vusi.</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/12.jpg" /></p>
+<p>Men kua sprang tilbake til bonden rundt middagstid. Og Vusi gikk seg vill på reisen. Kan kom frem veldig sent til bryllupet til søstera si. Gjestene var allerede i gang med å spise.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/13.jpg" /></p>
+<p>&quot;Hva skal jeg gjøre?&quot; ropte Vusi. &quot;Den kua som sprang bort var en gave til gjengjeld for halmen som bygningsarbeiderne ga meg. Bygningsarbeiderne ga meg halmen fordi de knakk kjeppen fra fruktplukkerne. Fruktplukkerne ga meg kjeppen fordi de knuste egget som var ment for kaka. Kaka var ment for bryllupet. Nå er det ikke noe egg, ikke noen kake, og ikke noen gave.&quot;</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/14.jpg" /></p>
+<p>Søstera til Vusi tenkte en stund, så sa hun: &quot;Vusi, broren min, jeg bryr meg virkelig ikke om gaver. Jeg bryr meg ikke en gang om kaka! Vi er alle sammen samlet her, så jeg er glad. Så ta på deg noen fint klær og la oss feire denne dagen!&quot; Så det var det Vusi gjorde.</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="det-som-søstera-til-vusi-sa-1">Det som søstera til Vusi sa</h2>
+<strong>Tekst:</strong> Nina Orange<br> <strong>Illustrasjoner:</strong> Wiehan de Jager<br> <strong>Oversettelse:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
+<p>
+Denne fortellingen kommer fra <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, som jobber med å oversette fortellingene fra <a href='http://africanstorybook.org/'>African Storybook Project</a> til alle verdens språk.
+<p>
+Du kan se den originale fortellingen på ASP-websida <a href='http://africanstorybook.org/stories/what-vusis-sister-said'>her</a>
+<p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p dir="rtl"><center><div class="license">
+<p><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
