--- a/stories/index.html
+++ b/stories/index.html
@@ -2379,6 +2379,12 @@
       <td><a name="ja0002"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0006</td>
+      <td><a href="/stories/ja/0006_アナンシと知恵_slides.html" target="_blank">アナンシと知恵</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0006"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0008</td>
       <td><a href="/stories/ja/0008_なにしてるの_slides.html" target="_blank">なにしてるの？</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2389,6 +2395,12 @@
       <td><a href="/stories/ja/0009_猫ちゃんはどこですか_slides.html" target="_blank">猫ちゃんはどこですか。</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ja0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0066</td>
+      <td><a href="/stories/ja/0066_ノジベレと三本の髪の毛_slides.html" target="_blank">ノジベレと三本の髪の毛</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0066"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0110</td>
@@ -2407,6 +2419,12 @@
       <td><a href="/stories/ja/0139_体の中のワニ_slides.html" target="_blank">体の中のワニ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ja0139"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0141</td>
+      <td><a href="/stories/ja/0141_鶏とヤスデ_slides.html" target="_blank">鶏とヤスデ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0141"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0201</td>
@@ -2431,6 +2449,18 @@
       <td><a href="/stories/ja/0294_おばあちゃんのバナナ_slides.html" target="_blank">おばあちゃんのバナナ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ja0294"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0315</td>
+      <td><a href="/stories/ja/0315_サキマの歌_slides.html" target="_blank">サキマの歌</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0315"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0324</td>
+      <td><a href="/stories/ja/0324_僕が街に向けて家を出た日_slides.html" target="_blank">僕が街に向けて家を出た日</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0324"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0329</td>
@@ -5515,7 +5545,7 @@
       <td>0006</td>
       <td><a href="http://africanstorybook.org/stories/anansi-and-wisdom">Anansi and Wisdom</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0006">ar</a>, <a href="#bn0006">bn</a>, <a href="#de0006">de</a>, <a href="#eo0006">eo</a>, <a href="#es0006">es</a>, <a href="#fa0006">fa</a>, <a href="#hi0006">hi</a>, <a href="#it0006">it</a>, <a href="#ko0006">ko</a>, <a href="#no0006">no</a>, <a href="#pa0006">pa</a>, <a href="#pl0006">pl</a>, <a href="#ru0006">ru</a>, <a href="#tl0006">tl</a>, <a href="#tr0006">tr</a>, <a href="#ur0006">ur</a>, <a href="#vi0006">vi</a>, <a href="#yue0006">yue</a>, <a href="#zh0006">zh</a></td>
+      <td><a href="#ar0006">ar</a>, <a href="#bn0006">bn</a>, <a href="#de0006">de</a>, <a href="#eo0006">eo</a>, <a href="#es0006">es</a>, <a href="#fa0006">fa</a>, <a href="#hi0006">hi</a>, <a href="#it0006">it</a>, <a href="#ja0006">ja</a>, <a href="#ko0006">ko</a>, <a href="#no0006">no</a>, <a href="#pa0006">pa</a>, <a href="#pl0006">pl</a>, <a href="#ru0006">ru</a>, <a href="#tl0006">tl</a>, <a href="#tr0006">tr</a>, <a href="#ur0006">ur</a>, <a href="#vi0006">vi</a>, <a href="#yue0006">yue</a>, <a href="#zh0006">zh</a></td>
     </tr>
     <tr>
       <td>0007</td>
@@ -5605,7 +5635,7 @@
       <td>0066</td>
       <td><a href="http://africanstorybook.org/stories/nozibele-and-three-hairs">Nozibele and the three hairs</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0066">ar</a>, <a href="#es0066">es</a>, <a href="#fa0066">fa</a>, <a href="#it0066">it</a>, <a href="#ko0066">ko</a>, <a href="#no0066">no</a>, <a href="#pa0066">pa</a>, <a href="#pl0066">pl</a>, <a href="#ru0066">ru</a>, <a href="#tl0066">tl</a>, <a href="#ur0066">ur</a>, <a href="#vi0066">vi</a>, <a href="#yue0066">yue</a>, <a href="#zh0066">zh</a></td>
+      <td><a href="#ar0066">ar</a>, <a href="#es0066">es</a>, <a href="#fa0066">fa</a>, <a href="#it0066">it</a>, <a href="#ja0066">ja</a>, <a href="#ko0066">ko</a>, <a href="#no0066">no</a>, <a href="#pa0066">pa</a>, <a href="#pl0066">pl</a>, <a href="#ru0066">ru</a>, <a href="#tl0066">tl</a>, <a href="#ur0066">ur</a>, <a href="#vi0066">vi</a>, <a href="#yue0066">yue</a>, <a href="#zh0066">zh</a></td>
     </tr>
     <tr>
       <td>0067</td>
@@ -5779,7 +5809,7 @@
       <td>0141</td>
       <td><a href="http://africanstorybook.org/stories/chicken-and-millipede">Chicken and Millipede</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0141">ar</a>, <a href="#de0141">de</a>, <a href="#es0141">es</a>, <a href="#fa0141">fa</a>, <a href="#it0141">it</a>, <a href="#ko0141">ko</a>, <a href="#no0141">no</a>, <a href="#pa0141">pa</a>, <a href="#pl0141">pl</a>, <a href="#tl0141">tl</a>, <a href="#ur0141">ur</a>, <a href="#yue0141">yue</a>, <a href="#zh0141">zh</a></td>
+      <td><a href="#ar0141">ar</a>, <a href="#de0141">de</a>, <a href="#es0141">es</a>, <a href="#fa0141">fa</a>, <a href="#it0141">it</a>, <a href="#ja0141">ja</a>, <a href="#ko0141">ko</a>, <a href="#no0141">no</a>, <a href="#pa0141">pa</a>, <a href="#pl0141">pl</a>, <a href="#tl0141">tl</a>, <a href="#ur0141">ur</a>, <a href="#yue0141">yue</a>, <a href="#zh0141">zh</a></td>
     </tr>
     <tr>
       <td>0143</td>
@@ -6025,7 +6055,7 @@
       <td>0315</td>
       <td><a href="http://africanstorybook.org/stories/sakima%E2%80%99s-song">Sakima’s song</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0315">ar</a>, <a href="#es0315">es</a>, <a href="#fa0315">fa</a>, <a href="#it0315">it</a>, <a href="#ko0315">ko</a>, <a href="#no0315">no</a>, <a href="#pa0315">pa</a>, <a href="#pl0315">pl</a>, <a href="#tl0315">tl</a>, <a href="#ur0315">ur</a>, <a href="#yue0315">yue</a>, <a href="#zh0315">zh</a></td>
+      <td><a href="#ar0315">ar</a>, <a href="#es0315">es</a>, <a href="#fa0315">fa</a>, <a href="#it0315">it</a>, <a href="#ja0315">ja</a>, <a href="#ko0315">ko</a>, <a href="#no0315">no</a>, <a href="#pa0315">pa</a>, <a href="#pl0315">pl</a>, <a href="#tl0315">tl</a>, <a href="#ur0315">ur</a>, <a href="#yue0315">yue</a>, <a href="#zh0315">zh</a></td>
     </tr>
     <tr>
       <td>0319</td>
@@ -6043,7 +6073,7 @@
       <td>0324</td>
       <td><a href="http://africanstorybook.org/stories/day-i-left-home-city">The day I left home for the city</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0324">ar</a>, <a href="#es0324">es</a>, <a href="#fa0324">fa</a>, <a href="#it0324">it</a>, <a href="#ko0324">ko</a>, <a href="#pa0324">pa</a>, <a href="#pl0324">pl</a>, <a href="#tl0324">tl</a>, <a href="#ur0324">ur</a>, <a href="#vi0324">vi</a>, <a href="#yue0324">yue</a>, <a href="#zh0324">zh</a></td>
+      <td><a href="#ar0324">ar</a>, <a href="#es0324">es</a>, <a href="#fa0324">fa</a>, <a href="#it0324">it</a>, <a href="#ja0324">ja</a>, <a href="#ko0324">ko</a>, <a href="#pa0324">pa</a>, <a href="#pl0324">pl</a>, <a href="#tl0324">tl</a>, <a href="#ur0324">ur</a>, <a href="#vi0324">vi</a>, <a href="#yue0324">yue</a>, <a href="#zh0324">zh</a></td>
     </tr>
     <tr>
       <td>0327</td>
