--- a/stories/index.html
+++ b/stories/index.html
@@ -2321,6 +2321,12 @@
       <td><a name="hi0095"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0120</td>
+      <td><a href="/stories/hi/0120_बाल_slides.html" target="_blank">बाल</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm9TTkFCSVpEUTA"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hi0120"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0127</td>
       <td><a href="/stories/hi/0127_विभिन्न-खेल_slides.html" target="_blank">विभिन्न खेल</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm9TTkFCSVpEUTA"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -6489,7 +6495,7 @@
       <td>0120</td>
       <td><a href="http://africanstorybook.org/stories/hair">Hair</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0120">ar</a>, <a href="#bn0120">bn</a>, <a href="#de0120">de</a>, <a href="#es0120">es</a>, <a href="#fa0120">fa</a>, <a href="#gu0120">gu</a>, <a href="#it0120">it</a>, <a href="#ja0120">ja</a>, <a href="#ko0120">ko</a>, <a href="#nb0120">nb</a>, <a href="#nn0120">nn</a>, <a href="#pa0120">pa</a>, <a href="#pl0120">pl</a>, <a href="#tl0120">tl</a>, <a href="#tr0120">tr</a>, <a href="#ur0120">ur</a>, <a href="#yue0120">yue</a>, <a href="#zh0120">zh</a></td>
+      <td><a href="#ar0120">ar</a>, <a href="#bn0120">bn</a>, <a href="#de0120">de</a>, <a href="#es0120">es</a>, <a href="#fa0120">fa</a>, <a href="#gu0120">gu</a>, <a href="#hi0120">hi</a>, <a href="#it0120">it</a>, <a href="#ja0120">ja</a>, <a href="#ko0120">ko</a>, <a href="#nb0120">nb</a>, <a href="#nn0120">nn</a>, <a href="#pa0120">pa</a>, <a href="#pl0120">pl</a>, <a href="#tl0120">tl</a>, <a href="#tr0120">tr</a>, <a href="#ur0120">ur</a>, <a href="#yue0120">yue</a>, <a href="#zh0120">zh</a></td>
     </tr>
     <tr>
       <td>0121</td>
